--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,4 @@
+@import "partials/_variables";
 @import "partials/_button";
 @import "partials/_column";
 @import "partials/_editableText";
@@ -10,4 +11,3 @@
 @import "partials/_section";
 @import "partials/_title";
 @import "partials/_body";
-@import "partials/_variables"
