--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -1,3 +1,8 @@
+//Navigation
 $navColor: #EEEEEE;
-$navButton: #d3d3d3;
+$navButton: #D3D3D3;
 $navText: #FFFFFF;
+
+//editable text
+$editBtn:#FFFFFF;
+$editBackground:#90EE90;
