--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -9,3 +9,7 @@ $navText: #FFFFFF;
 //editable text
 $editBtn:#000000;
 $editBackground:#90EE90;
+
+//Button
+$buttonColor: #D3D3D3;
+$buttonText: #000000;
