--- a/src/sass/partials/_navbar.scss
+++ b/src/sass/partials/_navbar.scss
@@ -1,8 +1,13 @@
 .navbar {
     background-color: $navColor;
-    float: left;
     width: 100%;
     position: relative;
+
+    &::after {
+        clear: both;
+        content: " ";
+        display: block;
+    }
 
     & li {
         display: inline-block;
